add more config for hbase